[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/MainScenes/GameControllerScene/GameControllerScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Maps/MapOne.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Buttons/UIButtons/right.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/UIButtons/barsHorizontal.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Buttons/UIButtons/fastForward.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Buttons/UIButtons/home.png" type="Texture" id=7]
[ext_resource path="res://Resources/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/UI/Buttons/BlueButtons/blue_button12.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/towerDefense_tile287.png" type="Texture" id=10]
[ext_resource path="res://Assets/Weapons/Plane/towerDefense_tile270.png" type="Texture" id=11]
[ext_resource path="res://Assets/Weapons/Gunner/towerDefense_tile291.png" type="Texture" id=12]
[ext_resource path="res://Assets/Weapons/Turret/towerDefense_tile249.png" type="Texture" id=13]
[ext_resource path="res://Assets/Weapons/RocketLauncher/towerDefense_tile206.png" type="Texture" id=14]
[ext_resource path="res://Scenes/MainScenes/GameControllerScene/UI.gd" type="Script" id=15]
[ext_resource path="res://Assets/UI/Buttons/UIButtons/pause.png" type="Texture" id=16]
[ext_resource path="res://Resources/Fonts/KFT-25pt-1px.tres" type="DynamicFont" id=17]
[ext_resource path="res://Assets/UI/Buttons/RedButtons/red_button02.png" type="Texture" id=18]
[ext_resource path="res://Assets/UI/Buttons/RedButtons/red_button01.png" type="Texture" id=19]
[ext_resource path="res://Scenes/MainScenes/GameControllerScene/ViewportContainer.gd" type="Script" id=20]
[ext_resource path="res://Assets/UI/no_buy.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="GameControllerScene" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.0745098, 0.0784314, 0.0784314, 1 )
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
texture = ExtResource( 3 )
expand = true

[node name="HUD" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 724.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 15 )

[node name="ViewportContainer" type="ViewportContainer" parent="HUD"]
margin_right = 1280.0
margin_bottom = 620.0
rect_min_size = Vector2( 1280, 620 )
stretch = true
script = ExtResource( 20 )

[node name="Viewport" type="Viewport" parent="HUD/ViewportContainer"]
size = Vector2( 1280, 620 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="MapOne" parent="HUD/ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="IconContainer" type="HBoxContainer" parent="HUD"]
margin_top = 624.0
margin_right = 1280.0
margin_bottom = 724.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 1280, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0

[node name="CashSymbol" type="TextureRect" parent="HUD/IconContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 95.0
rect_min_size = Vector2( 100, 90 )
size_flags_vertical = 4
texture = ExtResource( 10 )
expand = true

[node name="CashAmount" type="Label" parent="HUD/IconContainer"]
margin_left = 100.0
margin_top = 18.0
margin_right = 295.0
margin_bottom = 81.0
rect_min_size = Vector2( 195, 63 )
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HUD/IconContainer"]
margin_left = 295.0
margin_top = 4.0
margin_right = 595.0
margin_bottom = 96.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 60 )
size_flags_vertical = 4
scroll_vertical_enabled = false

[node name="ShopContainer" type="HBoxContainer" parent="HUD/IconContainer/ScrollContainer"]
margin_right = 412.0
margin_bottom = 80.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 80 )
size_flags_vertical = 4
alignment = 1

[node name="Turret" type="TextureButton" parent="HUD/IconContainer/ScrollContainer/ShopContainer" groups=["build_buttons"]]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true

[node name="TextureRect" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/Turret"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 13 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/Turret"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 21 )
expand = true

[node name="RocketLauncher" type="TextureButton" parent="HUD/IconContainer/ScrollContainer/ShopContainer" groups=["build_buttons"]]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
texture_normal = ExtResource( 9 )
expand = true

[node name="TextureRect" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/RocketLauncher"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 14 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/RocketLauncher"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 21 )
expand = true

[node name="Plane" type="TextureButton" parent="HUD/IconContainer/ScrollContainer/ShopContainer" groups=["build_buttons"]]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true

[node name="TextureRect" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/Plane"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 11 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/Plane"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 21 )
expand = true

[node name="Gunner" type="TextureButton" parent="HUD/IconContainer/ScrollContainer/ShopContainer" groups=["build_buttons"]]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
expand = true

[node name="TextureRect" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/Gunner"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 12 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="HUD/IconContainer/ScrollContainer/ShopContainer/Gunner"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 80 )
texture = ExtResource( 21 )
expand = true

[node name="HomeIcon" type="TextureRect" parent="HUD/IconContainer"]
margin_left = 595.0
margin_top = 5.0
margin_right = 695.0
margin_bottom = 95.0
rect_min_size = Vector2( 100, 90 )
size_flags_vertical = 4
texture = ExtResource( 7 )
expand = true

[node name="HP" type="TextureProgress" parent="HUD/IconContainer"]
margin_left = 695.0
margin_top = 10.0
margin_right = 995.0
margin_bottom = 90.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 300, 80 )
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.172549, 1, 0, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="HUD/IconContainer/HP"]

[node name="Control" type="Control" parent="HUD/IconContainer"]
margin_left = 995.0
margin_right = 1005.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )

[node name="StartWaveButton" type="TextureButton" parent="HUD/IconContainer"]
margin_left = 1005.0
margin_right = 1185.0
margin_bottom = 90.0
rect_min_size = Vector2( 180, 90 )
size_flags_vertical = 0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )
expand = true

[node name="Label" type="Label" parent="HUD/IconContainer/StartWaveButton"]
margin_right = 180.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 80 )
custom_fonts/font = ExtResource( 17 )
text = "Start Next Wave"
align = 1
autowrap = true

[node name="PausePlay" type="TextureButton" parent="HUD/IconContainer"]
pause_mode = 2
visible = false
margin_left = 1005.0
margin_right = 1105.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 4 )

[node name="SpeedButton" type="TextureButton" parent="HUD/IconContainer"]
visible = false
margin_left = 1005.0
margin_top = 5.0
margin_right = 1085.0
margin_bottom = 95.0
grow_horizontal = 2
rect_min_size = Vector2( 80, 90 )
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="MenuButton" type="TextureButton" parent="HUD/IconContainer"]
margin_left = 1185.0
margin_top = 5.0
margin_right = 1265.0
margin_bottom = 95.0
rect_min_size = Vector2( 80, 90 )
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true

[connection signal="pressed" from="HUD/IconContainer/StartWaveButton" to="." method="start_next_wave"]
[connection signal="pressed" from="HUD/IconContainer/PausePlay" to="HUD" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="HUD/IconContainer/SpeedButton" to="HUD" method="_on_SpeedButton_pressed"]
